--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <header>Multi-Site Movie Search</header>
 
 <div class="search-container">
-  <input type="text" id="query" placeholder="Search movies...">
+  <input type="text" id="query" placeholder="Search movies by type only name and year...">
   <button id="search-btn">Search</button>
 </div>
 
@@ -20,3 +20,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
