--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Material 3 Cinematic Search</title>
- <link rel="icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="favicon.ico" type="image/x-icon">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
 </head>
@@ -12,7 +12,7 @@
 <header>Multi-Site Movie Search</header>
 
 <div class="search-container">
-  <input type="text" id="query" placeholder="Search movies by typing name and year...">
+  <input type="text" id="query" placeholder="Search movies...">
   <button id="search-btn">Search</button>
 </div>
 
@@ -21,6 +21,3 @@
 <script src="script.js"></script>
 </body>
 </html>
-
-
-
