--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <header>Multi-Site Movie Search</header>
 
 <div class="search-container">
-  <input type="text" id="query" placeholder="Search movies...">
+  <input type="text" id="query" placeholder="Search by typing movies name and year...">
   <button id="search-btn">Search</button>
 </div>
 
