--- a/index.html
+++ b/index.html
@@ -6,10 +6,27 @@
 <title>Material 3 Cinematic Search</title>
 <link rel="icon" href="favicon.ico" type="image/x-icon">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=search" />
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+<!-- Cinematic Loading Screen -->
+<div class="cinematic-loading-screen" id="cinematic-loading">
+    <div class="loading-logo">
+        <div class="loading-logo-text">CINEMATIC</div>
+    </div>
+    <div class="cinematic-loader">
+        <div class="cinematic-progress" id="cinematic-progress"></div>
+    </div>
+    <div class="loading-status">Loading immersive experience</div>
+    <div class="loading-dots">
+        <div class="loading-dot"></div>
+        <div class="loading-dot"></div>
+        <div class="loading-dot"></div>
+    </div>
+    <div class="loading-hint">Your cinematic journey is about to begin</div>
+</div>
 
 <header>Multi-Site Movie Search</header>
 
